[package]
name = "race"
version = "0.1.0"
authors = ["72nd <msg@frg72.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
rusty-money = "0.3.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
